--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,7 +1,10 @@
 body {
     overflow-x: hidden;
 }
-
+.pageLoading{
+ overflow-y: hidden;   
+ height: 100%;
+}
 p {
     font-size: 20px;
 }
@@ -256,10 +259,9 @@ section h2 {
 }
 
 section.success {
-  
+     color: #fff;   
      background: url("../img/bg3.jpg") no-repeat fixed center center rgba(0, 0, 0, 0);
      padding: 100px 0;
-       color: #fff;
 }
 /*iPhone and smaller*/
 @media(max-width:767px) {
@@ -302,6 +304,25 @@ section.success {
     max-width: 400px;
 }
 
+#portfolio .portfolio-item .portfolio-link p {
+ display: inline-block;
+    margin: 30px 0 0.25em;
+    padding: 0.4em 1em;
+    background: rgba(255,255,255,0.9);
+    color: #2f3238;
+    text-transform: none;
+    font-weight: bold;
+    font-size: 1em !important;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-360px,0,0);
+    transform: translate3d(-360px,0,0);
+}
+#portfolio .portfolio-item .portfolio-link .caption:hover p{
+    opacity: 1;
+    -webkit-transform: translate3d(0px,0,0);
+    transform: translate3d(0px,0,0);
+}
 #portfolio .portfolio-item .portfolio-link .caption {
     position: absolute;
     width: 100%;
@@ -311,12 +332,16 @@ section.success {
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
+    overflow: hidden;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
     opacity: 1;
 }
-
+#portfolio .portfolio-item .portfolio-link .caption:hover .caption-content{
+    -webkit-transform: translate3d(0px,0,0);
+    transform: translate3d(0px,0,0);
+}
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
     top: 50%;
@@ -326,6 +351,11 @@ section.success {
     text-align: center;
     font-size: 20px;
     color: #fff;
+     -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    transition: all ease .5s;
+    -webkit-transform: translate3d(0px,50px,0);
+    transform: translate3d(0px,50px,0);
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
@@ -599,6 +629,7 @@ opacity: 0;
 .portfolio-item{
     opacity:0;
 
+
 }
 h2.portfolioAnimate{
     margin-top: -100px;
@@ -717,3 +748,175 @@ ul.logo-icons.about li{
 }
 
 /*Sublime text loading*/
+
+
+#projects figure {
+    position: relative;
+    float: left;
+    overflow: hidden;
+    margin: 10px auto;
+    min-width: 320px;
+    max-width: 480px;
+    max-height: 360px;
+    
+    height: auto;
+    background: #2f3238;
+    text-align: center;
+    cursor: pointer;
+}
+
+#projects figure img {
+    position: relative;
+    display: block;
+    min-height: 100%;
+    max-width: 100%;
+    opacity: 0.8;
+}
+
+#projects figure figcaption {
+    padding: 2em;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+#projects figure figcaption::before,
+#projects figure figcaption::after {
+    pointer-events: none;
+}
+
+#projects figure figcaption,
+#projects figure figcaption > a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+/* Anchor will cover the whole item by default */
+/* For some effects it will show as a button */
+#projects figure figcaption > a {
+    z-index: 1000;
+    text-indent: 200%;
+    white-space: nowrap;
+    font-size: 0;
+    opacity: 0;
+}
+
+#projects figure h2 {
+    word-spacing: -0.15em;
+    font-weight: 300;
+    font-size: 1em;
+}
+
+#projects figure h2 span {
+    font-weight: 800;
+}
+
+#projects figure h2,
+#projects figure p {
+    margin: 0;
+}
+
+#projects figure p {
+    letter-spacing: 1px;
+    font-size: 68.5%;
+}
+
+
+/* Media queries */
+@media screen and (max-width: 50em) {
+ 
+    .grid figure {
+        display: inline-block;
+        float: none;
+        margin: 10px auto;
+        width: 100%;
+    }
+}
+/*---------------*/
+/***** Julia *****/
+/*---------------*/
+
+figure.effect-julia {
+    background: #2f3238;
+}
+
+figure.effect-julia img {
+    max-width: none;
+    height: 313px;
+    -webkit-transition: opacity 1s, -webkit-transform .5s;
+    transition: opacity 1s, transform .5s;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+figure.effect-julia figcaption {
+    text-align: left;
+}
+
+figure.effect-julia h2 {
+    position: relative;
+    padding: 0.5em 0;
+}
+
+figure.effect-julia p {
+    display: inline-block;
+    margin: 0 0 0.25em;
+    padding: 0.4em 1em;
+    background: rgba(255,255,255,0.9);
+    color: #2f3238;
+    text-transform: none;
+    font-weight: bold;
+    font-size: 1em !important;
+    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+    transition: opacity 0.35s, transform 0.35s;
+    -webkit-transform: translate3d(-360px,0,0);
+    transform: translate3d(-360px,0,0);
+}
+
+figure.effect-julia p:first-child {
+    -webkit-transition-delay: 0.15s;
+    transition-delay: 0.15s;
+}
+
+figure.effect-julia p:nth-of-type(2) {
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+figure.effect-julia p:nth-of-type(3) {
+    -webkit-transition-delay: 0.05s;
+    transition-delay: 0.05s;
+}
+
+figure.effect-julia:hover p:first-child {
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+
+figure.effect-julia:hover p:nth-of-type(2) {
+    -webkit-transition-delay: 0.05s;
+    transition-delay: 0.05s;
+}
+
+figure.effect-julia:hover p:nth-of-type(3) {
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+}
+
+figure.effect-julia:hover img {
+    opacity: 0.4!important;
+    -webkit-transform: scale3d(1.1,1.1,1);
+    transform: scale3d(1.1,1.1,1);
+}
+
+figure.effect-julia:hover p {
+    opacity: 1;
+    -webkit-transform: translate3d(-50px,0,0);
+    transform: translate3d(-50px,0,0);
+}
+
