--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,3 +1,221 @@
+.nav-toggle {
+     background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
+    border: medium none;
+    cursor: pointer;
+    padding: 10px 35px 16px 0;
+    position: fixed;
+    right: 15px;
+    top: 10px;
+    z-index: 1998;
+}
+.nav-toggle:focus {
+    outline: medium none;
+}
+.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
+    background: none repeat scroll 0 0 #fff;
+    border-radius: 1px;
+    content: "";
+    cursor: pointer;
+    display: block;
+    height: 5px;
+    position: absolute;
+    width: 35px;
+}
+.nav-toggle span:before {
+    top: -10px;
+}
+.nav-toggle span:after {
+    bottom: -10px;
+}
+.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
+    transition: all 300ms ease-in-out 0s;
+}
+.nav-toggle.active span {
+    background-color: transparent!important;
+}
+.nav-toggle.active span:before, .nav-toggle.active span:after {
+    top: 0;
+}
+.nav-toggle.active span:before {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+.nav-toggle.active span:after {
+    top: 10px;
+    transform: translateY(-10px) rotate(-45deg);
+    -webkit-transform: translateY(-10px) rotate(-45deg);
+}
+
+.nav-toggle.portfolio span,.nav-toggle.portfolio span::before,.nav-toggle.portfolio span::after{
+    background-color: #000;
+}
+.nav-toggle.about span,.nav-toggle.about span::before,.nav-toggle.about span::after {
+    background-color: #fff;
+}
+.nav-toggle.contact  span,.nav-toggle.contact span::before,.nav-toggle.contact span::after {
+    background-color: #28c3ab;
+}
+
+
+.overlay-hugeinc {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.5s, visibility 0s 0.5s;
+}
+ 
+.overlay-hugeinc.open {
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.5s;
+}
+ 
+.overlay-hugeinc nav {
+    perspective: 1200px;
+}
+ 
+.overlay-hugeinc nav ul {
+    opacity: 0.4;
+    transform: translateY(-25%) rotateX(35deg);
+    transition: transform 0.5s, opacity 0.5s;
+}
+ 
+.overlay-hugeinc.open nav ul {
+    opacity: 1;
+    transform: rotateX(0deg);
+}
+ 
+.overlay-hugeinc.close nav ul {
+    transform: translateY(25%) rotateX(-35deg);
+}
+
+
+
+/* Overlay style */
+.overlay1 {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(153,204,51,0.9);
+}
+
+/* Overlay closing cross */
+.overlay1 .overlay-close {
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    overflow: hidden;
+    border: none;
+   
+    text-indent: 200%;
+    color: transparent;
+    outline: none;
+    z-index: 100;
+}
+
+/* Menu style */
+.overlay1 nav {
+    text-align: center;
+    position: relative;
+    top: 50%;
+    height: 60%;
+    font-size: 54px;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.overlay1 ul {
+    list-style: none;
+    padding: 0;
+    margin: 0 auto;
+    display: inline-block;
+    height: 100%;
+    position: relative;
+    width: 100%;
+}
+
+.overlay1 ul li {
+    display: table;
+    height: 20%;
+    height: calc(100% / 5);
+    min-height: 54px;
+    width: 100%;
+}
+
+.overlay1 ul li a {
+    display: table-cell;
+    color: #fff;
+    -webkit-transition: all 0.2s;
+    transition: all 0.5s;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif!important;
+    text-transform: uppercase;
+    background: transparent;
+    padding: 5px 0;
+}
+
+.overlay1 ul li a:hover,
+.overlay1 ul li a:focus {
+    color: rgba(153,204,51,0.9);
+    background-color: #fff;
+    text-decoration: none;
+}
+
+/* Effects */
+.overlay-hugeinc {
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity 0.5s, visibility 0s 0.5s;
+    transition: opacity 0.5s, visibility 0s 0.5s;
+}
+
+.overlay-hugeinc.open {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+.overlay-hugeinc nav {
+    -webkit-perspective: 1200px;
+    perspective: 1200px;
+}
+
+.overlay-hugeinc nav ul {
+    opacity: 0.4;
+    -webkit-transform: translateY(-25%) rotateX(35deg);
+    transform: translateY(-25%) rotateX(35deg);
+    -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
+    transition: transform 0.5s, opacity 0.5s;
+}
+
+.overlay-hugeinc.open nav ul {
+    opacity: 1;
+    -webkit-transform: rotateX(0deg);
+    transform: rotateX(0deg);
+}
+
+.overlay-hugeinc.close nav ul {
+    -webkit-transform: translateY(25%) rotateX(-35deg);
+    transform: translateY(25%) rotateX(-35deg);
+}
+
+@media screen and (max-height: 30.5em) {
+    .overlay1 nav {
+        height: 70%;
+        font-size: 24px;
+    }
+    .overlay1 ul li {
+        min-height: 34px;
+    }
+}
+
+
+
+
+
 body {
     overflow-x: hidden;
 }
@@ -29,7 +247,7 @@ h4,
 h5,
 h6 {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif!important;
     font-weight: 700;
 }
 
